// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FilterWallets > should render 1`] = `
<div>
  <div
    class="flex flex-col text-left"
    data-testid="FilterWallets"
  >
    <div
      class="mb-6"
    >
      <div
        class="font-semibold text-theme-secondary-text"
      >
        Filter Networks
      </div>
      <div
        class="mt-1 text-sm font-semibold text-theme-secondary-500"
      >
        Select the networks to show.
      </div>
    </div>
    <div
      class="space-y-2"
    />
    <div
      class="mb-6 mt-2 border-t border-dotted border-theme-secondary-300 dark:border-theme-secondary-800"
    />
    <div
      class="flex flex-col"
    >
      <div
        class="flex items-center justify-between"
      >
        <div>
          <div
            class="font-semibold text-theme-secondary-text"
          >
            Your Wallets
          </div>
          <div
            class="mt-2 pr-12 text-sm font-semibold text-theme-secondary-500"
          >
            Select which wallets to view.
          </div>
        </div>
        <div
          aria-expanded="false"
          aria-haspopup="dialog"
          data-testid="dropdown__toggle"
        >
          <div
            class="flex cursor-pointer items-center justify-end text-theme-secondary-text"
            data-testid="filter-wallets__wallets"
          >
            <span
              class="mr-2 inline-block font-semibold"
            />
            <div
              class="transition-transform css-15txs7d"
              height="10"
              width="10"
            >
              <svg
                id="chevron-down-small"
                viewBox="0 0 10 10"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FilterWallets > should render with networks selection 1`] = `
<div>
  <div
    class="flex flex-col text-left"
    data-testid="FilterWallets"
  >
    <div
      class="mb-6"
    >
      <div
        class="font-semibold text-theme-secondary-text"
      >
        Filter Networks
      </div>
      <div
        class="mt-1 text-sm font-semibold text-theme-secondary-500"
      >
        Select the networks to show.
      </div>
    </div>
    <div
      class="space-y-2"
    >
      <div
        data-testid="FilterNetwork"
      >
        <div
          class="mb-3 text-sm font-semibold text-theme-secondary-700"
        >
          Development Networks
        </div>
        <ul
          class="flex flex-wrap"
          data-testid="NetworkOptions"
        >
          <li
            class="inline-block cursor-pointer pb-4 pr-4"
            data-testid="NetworkOption__ark.devnet"
          >
            <div
              class="relative border-theme-secondary-300 dark:border-theme-secondary-800 ring-theme-background duration-100 css-1nqcsx"
            >
              <div
                aria-label="ARK Devnet"
                class="inline-flex h-5 w-5 items-center justify-center text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700"
                data-testid="NetworkIcon-ARK-ark.devnet"
              >
                <div
                  class="text-theme-secondary-300 css-1i4b0eq"
                  data-testid="NetworkIcon__icon"
                  height="20"
                  width="20"
                >
                  <svg
                    id="ark"
                    viewBox="0 0 36.3 30.6"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </div>
              <span
                class="absolute bottom-0 right-0 h-5 w-5 translate-x-1/2 translate-y-1/2 transform shadow-[0_0_0_5px_theme-background] flex items-center justify-center rounded-full border-2 bg-theme-background align-middle border-theme-secondary-300 dark:border-theme-secondary-800"
              >
                <span />
              </span>
            </div>
          </li>
        </ul>
      </div>
    </div>
    <div
      class="mb-6 mt-2 border-t border-dotted border-theme-secondary-300 dark:border-theme-secondary-800"
    />
    <div
      class="flex flex-col"
    >
      <div
        class="flex items-center justify-between"
      >
        <div>
          <div
            class="font-semibold text-theme-secondary-text"
          >
            Your Wallets
          </div>
          <div
            class="mt-2 pr-12 text-sm font-semibold text-theme-secondary-500"
          >
            Select which wallets to view.
          </div>
        </div>
        <div
          aria-expanded="false"
          aria-haspopup="dialog"
          data-testid="dropdown__toggle"
        >
          <div
            class="flex cursor-pointer items-center justify-end text-theme-secondary-text"
            data-testid="filter-wallets__wallets"
          >
            <span
              class="mr-2 inline-block font-semibold"
            />
            <div
              class="transition-transform css-15txs7d"
              height="10"
              width="10"
            >
              <svg
                id="chevron-down-small"
                viewBox="0 0 10 10"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
